# network-communicator

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  linux_conanprofile
client/: CMakeLists.txt  example.cmake
client/src/: Backend.cpp  Backend.h  Frontend.cpp  Frontend.h  example.cpp  main.cpp
client/ui/: main.qml
frontend/: CMakeLists.txt
frontend/src/: MainWindow.cpp  MainWindow.h
server/: CMakeLists.txt  example.cmake
server/src/: Frontend.cpp  Frontend.h  FrontendServerMediator.cpp  FrontendServerMediator.h  Server.cpp  Server.h  ServerInterface.h  Session.cpp  Session.h  TerminalInterface.cpp  TerminalInterface.h  TerminalInterfaceServerMediator.cpp  TerminalInterfaceServerMediator.h  TerminalOutput.cpp  TerminalOutput.h  example.cpp  main.cpp  main.qml  main.qml.autosave
server/ui/: MessageHistoryBox.qml  MessageInputBox.qml  main.qml  qml.qrc
server/ui/components/: Backend.qml  FormTextInput.qml  MessageHistoryBox.qml  MessageInputBox.qml  RegisterWindow.qml  StatusBar.qml
